--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -14,12 +14,14 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/et_title_hint" />
+            android:hint="@string/et_title_hint"
+            android:inputType="text"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/et_amount_hint" />
+            android:hint="@string/et_amount_hint"
+            android:inputType="text"/>
     </LinearLayout>
 
     <Button
@@ -27,11 +29,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:text="@string/btn_add_title"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-
-        />
+        android:layout_centerHorizontal="true" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_add_title"
+            android:textStyle="normal"
+            android:textSize="14sp"/>
+    </Button>
 
 
 
