--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_above="@+id/add_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="33dp"
-        android:paddingEnd="104dp"
-        android:layout_marginBottom="61dp"
-        android:orientation="vertical">
         <EditText
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/price"
+            android:layout_marginBottom="18dp"
+            android:layout_marginStart="33dp"
+            android:layout_marginEnd="104dp"
             android:hint="@string/et_title_hint"
             android:inputType="text"/>
 
         <EditText
+            android:id="@+id/price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/add_button"
+            android:layout_marginBottom="61dp"
+            android:layout_marginStart="33dp"
+            android:layout_marginEnd="104dp"
             android:hint="@string/et_amount_hint"
-            android:inputType="text"/>
-    </LinearLayout>
+            android:inputType="number"/>
 
     <Button
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/white"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_add_title"
-            android:textStyle="normal"
-            android:textSize="14sp"/>
-    </Button>
+        android:layout_centerHorizontal="true"
+        android:text="@string/btn_add_title" />
 
 
 
 
-</RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
