--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -14,8 +14,7 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:textSize="16sp"
-        android:textColor="@color/medium_grey"/>
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/text_view_item_value"
@@ -24,7 +23,6 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:layout_gravity="center_vertical"
-        android:alpha="0.8"
-        android:textColor="@color/dark_sky_blue" />
+        android:alpha="0.8" />
 
 </LinearLayout>
