--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <EditText
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/price"
-            android:layout_marginBottom="18dp"
-            android:layout_marginStart="33dp"
-            android:layout_marginEnd="104dp"
-            android:hint="@string/et_title_hint"
-            android:inputType="text"/>
+    <LinearLayout
+        app:layout_constraintBottom_toTopOf="@+id/add_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="61dp"
+        android:paddingStart="33dp"
+        android:paddingEnd="104dp">
 
-        <EditText
-            android:id="@+id/price"
+        <com.google.android.material.textfield.TextInputLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/add_button"
-            android:layout_marginBottom="61dp"
-            android:layout_marginStart="33dp"
-            android:layout_marginEnd="104dp"
+            android:hint="@string/et_title_hint"
+            android:textColorHint="@color/text_hint">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:inputType="text"/>
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/et_amount_hint"
-            android:inputType="number"/>
+            android:textColorHint="@color/text_hint">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:inputType="number"/>
+
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/add_button"
@@ -36,14 +59,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/white"
+        android:enabled="false"
+        android:background="?android:attr/selectableItemBackground"
+        android:textColor="@color/add_button_text_color_selector"
+        android:drawableLeft="@drawable/check_selector"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/btn_add_title" />
-
-
-
-
-
+        android:text="@string/btn_add_title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
